--- a/TastyBites/TastyBites.csproj
+++ b/TastyBites/TastyBites.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="itextsharp" Version="5.5.13.4" />
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
   </ItemGroup>
 
